--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^6.0.5",
+    "@mantine/hooks": "^6.0.5",
+    "@mantine/next": "^6.0.5",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.9.0",
