--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^6.0.5",
+    "@mantine/form": "^6.0.6",
     "@mantine/hooks": "^6.0.5",
     "@mantine/next": "^6.0.5",
     "@next-auth/prisma-adapter": "^1.0.5",
