--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "use-debounce": "^9.0.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
