--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^6.0.5",
+    "@mantine/dates": "^6.0.7",
     "@mantine/form": "^6.0.6",
     "@mantine/hooks": "^6.0.5",
     "@mantine/next": "^6.0.5",
@@ -25,6 +26,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
